refactoring: using Map instead of more specific HashMaps